Fix carousel bug with too low container

--- a/stylesheets/kanalstrasse.css
+++ b/stylesheets/kanalstrasse.css
@@ -61,18 +61,15 @@ p { margin: 2em 0; }
   padding: 0 5px;
 }
 
+#rotating_images .item { display: none; }
+#rotating_images .item.active { display: block; }
+
 #rotating_images .navigation .active,
 #rotating_images .navigation a:hover {
   color: #eee;
 }
 
-#rotating_images .item {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#rotating_images .item h1 {
+#rotating_images h1 {
   text-shadow: -2px -2px 6px #000;
   color: #fff;
   right: 0;
@@ -83,7 +80,7 @@ p { margin: 2em 0; }
   text-align: right;
 }
 
-#rotating_images .item h1 a { color: #fff; text-decoration: none; }
+#rotating_images h1 a { color: #fff; text-decoration: none; }
 
 #portfolio dt { font-weight: bold; }
 #portfolio dd { margin: 0.8em 1em; }
@@ -120,11 +117,11 @@ p { margin: 2em 0; }
   h2 { font-size: 1.4em; }
   .row { margin-left: 5px; margin-right: 5px; }
   #rotating_images, .row { width: auto; }
-  #rotating_images .item h1 { font-size: 1.4em; }
+  #rotating_images h1 { font-size: 1.4em; }
   #rotating_images img { width: 100%; }
   #contact { margin-bottom: 6em; }
 }
 
 @media (max-width: 400px) {
-  #rotating_images .item h1 { font-size: 1.2em; line-height: 1.1em; bottom: 5px; padding: 0 10px; }
+  #rotating_images h1 { font-size: 1.2em; line-height: 1.1em; bottom: 5px; padding: 0 10px; }
 }
